@@ -1,5 +1,6 @@
 Version 1.4.4
     * not released yet
+    * added ctrl/shift + insert shortcuts to copy/paste in webview
     * fixed: crash with Oxygen theme when closing windows with tabs on top
 
 Version 1.4.3
